Harden replay recovery guarantees